(三島)1-1から1-4までできました

--- a/01/prac1-5.html
+++ b/01/prac1-5.html
@@ -12,8 +12,12 @@
         function runButtonPressed() {
             var numbers = [];
             //prac1-5〜 1から10までの数を順に10個挿入する
+            for (var i = 1; i <= 10; i++) {
+                numbers.push(i)
+            }
             show(numbers);
             //prac1-5 全ての要素に10を足す
+            
             //prac1-6 全ての要素に10をかける
             show(numbers);
         }
