--- a/01/prac1-1.html
+++ b/01/prac1-1.html
@@ -12,24 +12,24 @@
         function runButtonPressed() {
             var numbers = [];
             //prac1-1 0を10個挿入する
-            for(var i = 1; i <= 10; i++){
+            for (var i = 1; i <= 10; i++) {
                 numbers.push(0)
             }
             show(numbers);
             //prac1-2 乱数を10個挿入する
-            for(var h = 1; h <= 10; h++){
-                var x = Math.random(100)
-                
+            for (var h = 1; h <= 10; h++) {
+                var x = Math.random() * 100
+                x = Math.floor(x)
                 numbers.push(x)
             }
             show(numbers);
             //prac1-3 '田中'を10個挿入する
-            for(var j = 1; j <= 10; j++){
+            for (var j = 1; j <= 10; j++) {
                 numbers.push("田中")
             }
             show(numbers);
             //prac1-4 1から20までの数を順に20個挿入する
-            for(var k = 1; k <= 20; k++){
+            for (var k = 1; k <= 20; k++) {
                 numbers.push(k)
             }
             show(numbers);
