(三島)1-5・1-6できました

--- a/01/prac1-5.html
+++ b/01/prac1-5.html
@@ -17,8 +17,14 @@
             }
             show(numbers);
             //prac1-5 全ての要素に10を足す
-            
+            for (var j = 0; j < 10; j++) {
+                numbers[j] = numbers[j] + 10
+            }
+            show(numbers);
             //prac1-6 全ての要素に10をかける
+            for (var k = 0; k < 10; k++) {
+                numbers[k] = numbers[k] * 10
+            }
             show(numbers);
         }
     </script>
