--- a/03/prac3-1.html
+++ b/03/prac3-1.html
@@ -10,8 +10,14 @@
 
     <script>
         function runButtonPressed() {
+
             //prac3-1 10個の乱数の合計を求める（繰り返しで）
+            var numbers = [];
+            createRandomNumbers(numbers, 10);
+            show(numbers);
+
             //prac3-2 10個の乱数の平均を求める
+
             //prac3-3 10個の乱数の最大値を求める
             //prac3-4 10個の乱数の最小値を求める
         }
