--- a/03/prac3-1.html
+++ b/03/prac3-1.html
@@ -17,6 +17,13 @@
             show(numbers);
 
             //prac3-2 10個の乱数の平均を求める
+            var sum = 0;
+            for (var i = 0; i <= 9; i++) {
+                sum = sum + numbers[i];
+            }
+            show(sum);
+
+
 
             //prac3-3 10個の乱数の最大値を求める
             //prac3-4 10個の乱数の最小値を求める
