--- a/03/prac3-1.html
+++ b/03/prac3-1.html
@@ -23,9 +23,16 @@
             }
             show(sum);
 
-
-
             //prac3-3 10個の乱数の最大値を求める
+            var max = numbers[0];
+            for (var j = 1; j <= 9; j++) {
+                if (max < numbers[j]) {
+                    max = numbers[j];
+                }
+            }
+            show(max);
+
+
             //prac3-4 10個の乱数の最小値を求める
         }
     </script>
