--- a/04templates/template4-3.html
+++ b/04templates/template4-3.html
@@ -9,45 +9,21 @@
     <script type="text/javascript" src="../jquery.min.js"></script>
 
     <script>
+        //prac4-0
         function runButtonPressed() {
             var numbers = [];
-            createOrderedRandomNumbers(numbers, 20);
+            var num = 0;
+            for (var i = 1; i <= 10; i++) {
+                var x = Math.random() * 4 + 1;
+                x = Math.floor(x);
+                num = num + x;
+                numbers.push(num);
+            }
             show(numbers);
         }
 
-        //この関数を，aaandd.jsに加えてください．
-        function createOrderedRandomNumbers(numbers, n) {
-            var count = 0;
-            for (var i = 1; ; i++) {
-                if (Math.floor(Math.random() * 3) == 0) {
-                    numbers.push(i);
-                    count++;
-                    if (count >= n) {
-                        break;
-                    }
-                }
-            }
-        }
 
-        //配列以外の変数を表示するために，aaandd.jsの中身を新しいshowに置き換えてください．
-        function show(obj) {
-            if (Array.isArray(obj)) {
-                var html = '';
-                html = html + '<table border="1">';
-                html = html + '<tr>';
-                for (var i = 0; i < obj.length; i++) {
-                    html = html + '<td>' + obj[i] + '</td>';
-                }
-                html = html + '</tr>';
-                html = html + '</table>';
-                //html = html + '<br>';
-                document.getElementById('res').insertAdjacentHTML('beforeend', html);
-            } else {
-                var string = JSON.stringify(obj);
-                string = string + '<br>';
-                document.getElementById('res').insertAdjacentHTML('beforeend', string);
-            }
-        }
+
     </script>
 
 </head>
