--- a/04templates/template4-3.html
+++ b/04templates/template4-3.html
@@ -32,11 +32,78 @@
                 }
             }
             if (num2 == -1) {
-                show('見つかりませんでした');
+                show('リニアサーチ：見つかりませんでした');
             } else if (num2 >= 0) {
-                show(num2 + '番地です');
+                show('リニアサーチ：' + num2 + '番地です');
             }
 
+            //prac4-4
+            var search2 = 3; // 特定の数字
+            var num3 = 0;
+            if (numbers[4] < search2) {
+                if (numbers[7] < search2) {
+                    if (numbers[8] < search2) {
+                        if (numbers[9] < search2) {
+                            num3 = -1;
+                        } else if (numbers[9] == search2) {
+                            num3 = 9;
+                        } else {
+                            num3 = -1;
+                        }
+                    } else if (numbers[8] > search2) {
+                        num3 = -1;
+                    } else {
+                        num3 = 8;
+                    }
+                } else if (numbers[7] > search2) {
+                    if (numbers[5] > search2) {
+                        num3 = -1;
+                    } else if (numbers[5] < search2) {
+                        if (numbers[6] == search2) {
+                            num3 = 6;
+                        } else {
+                            num3 = -1;
+                        }
+                    } else {
+                        num3 = 5;
+                    }
+                } else {
+                    num3 = 7;
+                }
+            } else if (numbers[4] > search2) {
+                if (numbers[2] < search2) {
+                    if (numbers[3] > search2) {
+                        num3 = -1;
+                    } else if (numbers[3] < search2) {
+                        num3 = -1;
+                    } else {
+                        num3 = 3;
+                    }
+                } else if (numbers[2] > search2) {
+                    if (numbers[0] > search2) {
+                        num3 = -1;
+                    } else if (numbers[0] < search2) {
+                        if (numbers[1] == search2) {
+                            num3 = 1;
+                        } else {
+                            num3 = -1;
+                        }
+                    } else {
+                        num3 = 0;
+                    }
+                } else {
+                    num3 = 2;
+                }
+            } else {
+                num3 = 4;
+            }
+
+
+            if (num3 == -1) {
+                show('バイナリサーチ：見つかりませんでした')
+            } else {
+                show('バイナリサーチ：' + num3 + '番地です');
+            }
 
         }
 
