--- a/04templates/template4-3.html
+++ b/04templates/template4-3.html
@@ -31,6 +31,7 @@
                     num2 = num2;
                 }
             }
+            console.log(`num2=${num2}`);
             if (num2 == -1) {
                 show('リニアサーチ：見つかりませんでした');
             } else if (num2 >= 0) {
