6-1できました

--- a/06/ex6-1.html
+++ b/06/ex6-1.html
@@ -14,7 +14,15 @@
             show(text);
             var chars = text.split('');
             show(chars);
-            var text2 = chars.join('');
+            var chars2 = [];
+            console.log(`${chars.length}`);
+            var count = chars.length;
+            for (var i = 1; i <= count; i++) {
+                var kaibun = chars.pop();
+                chars2.push(kaibun);
+            }
+            show(chars2);
+            var text2 = chars2.join('');
             show(text2);
         }
 
